$Id$                       -*-text-*-

**** 0.71

**** 0.70 Dec 6, 2012

Fix add NID L32 L64 LP resource records + unit tests to MANIFEST.

**** 0.69 Dec 5, 2012

Feature added support for NID L32 L64 LP, RFC6742.

Feature rt.cpan.org #62030

	Parsing of BIND zone files implemented in Net::DNS::ZoneFile.
	This replaces and is backward compatible with the CPAN module
	of the same name.

Enhancement to simplify RR subtype template and recode packages.

Enhancement rt.cpan.org #75185

	Packet decoder returns index to end of decoded data.

	Added packet->reply() method.

Fix rt.cpan.org #79569

	AXFR not setting packet->answer_from.

Enhancement rt.cpan.org #18819

	Added support for Unicode and non-ASCII character encoding.

Feature integrate OPT as a header extension

	Treat extended rcodes and the DO flag like they are part of
	the packet header.

Fix rt.cpan.org #77444

	Support escaped characters according to RFC1035 in TXT rdata.

Fix rt.cpan.org #77304

	Fix resolver searchlist from registry setup on Win32.

Enhancement rt.cpan.org #67570

	Make wire2presentation two till eighteen times faster.
	A contribution from Matthew Horsfall

Fix rt.cpan.org #73366

	Remove existing TSIG when resigning with a new TSIG and give warning.

Fix rt.cpan.org #75330

	Also try nameserver without glue (as a last resort) when recursing.

Fix rt.cpan.org #74493

	Read correct resolver configuration in OS/2.


**** 0.68 Jan 30, 2012

Fix rt.cpan.org #72314
	
	Let a Net::DNS::Nameserver bind on Net::DNS::Nameserver::DEFAULT_ADDR
	as a last resort.

Fix to suppress false warnings about subroutine profiles on ancient
	versions of perl.

Fix to avoid constants with value undef which prevents unwanted code from being
	optimized away on ancient versions of perl.

Fix code error in PTR.pm, canonical RDATA not downcased.

Enhancement to clarify the function of parse and data methods, by renaming them
	to decode and encode respectively.

Feature IDN query support.
